--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "emotion": "^11.0.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
